@@ -12,19 +12,19 @@ import com.zextras.carbonio.files.dal.dao.ebean.ACL;
 import com.zextras.carbonio.files.dal.dao.ebean.Share;
 import com.zextras.carbonio.files.dal.repositories.impl.ebean.utilities.ShareSort;
 import com.zextras.carbonio.files.dal.repositories.interfaces.ShareRepository;
+import io.ebean.ExpressionList;
 import io.ebean.Query;
 import io.ebean.Transaction;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class ShareRepositoryEbean implements ShareRepository {
 
-  private final EbeanDatabaseManager mDB;
+  private final EbeanDatabaseManager ebeanDatabaseManager;
 
   @Inject
   public ShareRepositoryEbean(EbeanDatabaseManager ebeanDatabaseManager) {
-    mDB = ebeanDatabaseManager;
+    this.ebeanDatabaseManager = ebeanDatabaseManager;
   }
 
   /**
@@ -32,46 +32,40 @@ public class ShareRepositoryEbean implements ShareRepository {
    *
    * @param nodeId is a {@link String} representing the id of the node on the requested share.
    * @param userId is a {@link String} representing the id of the user on the requested share.
-   *
    * @return an {@link Optional} of {@link Share} if it exists, an {@link Optional#empty()}
-   * otherwise.
+   *     otherwise.
    */
-  private Optional<Share> getRealShare(
-    String nodeId,
-    String userId
-  ) {
-    return mDB.getEbeanDatabase()
-      .find(Share.class)
-      .where()
-      .eq(Files.Db.Share.NODE_ID, nodeId)
-      .eq(Files.Db.Share.SHARE_TARGET_UUID, userId)
-      .findOneOrEmpty();
+  private Optional<Share> getRealShare(String nodeId, String userId) {
+    return ebeanDatabaseManager
+        .getEbeanDatabase()
+        .find(Share.class)
+        .where()
+        .eq(Files.Db.Share.NODE_ID, nodeId)
+        .eq(Files.Db.Share.SHARE_TARGET_UUID, userId)
+        .findOneOrEmpty();
   }
 
-  public Optional<Share> getShare(
-    String nodeId,
-    String userId
-  ) {
+  public Optional<Share> getShare(String nodeId, String userId) {
     return getRealShare(nodeId, userId);
   }
 
   public Optional<Share> upsertShare(
-    String nodeId,
-    String targetUserId,
-    ACL permissions,
-    Boolean direct,
-    Boolean createdViaCollaborationLink,
-    Optional<Long> expireTimestamp
-  ) {
+      String nodeId,
+      String targetUserId,
+      ACL permissions,
+      Boolean direct,
+      Boolean createdViaCollaborationLink,
+      Optional<Long> expireTimestamp) {
     Optional<Share> targetShare = getShare(nodeId, targetUserId);
     if (targetShare.isPresent()) {
       if (!targetShare.get().isDirect()) {
-        //We're converting an inherited share to a direct share
+        // We're converting an inherited share to a direct share
         Share updateShare = targetShare.get();
         if (direct) {
           updateShare.setDirect(true);
         }
         updateShare.setPermissions(permissions);
+        updateShare.setCreatedViaLink(createdViaCollaborationLink);
         expireTimestamp.ifPresent(updateShare::setExpiredAt);
         return Optional.of(updateShare(updateShare));
       } else {
@@ -79,69 +73,62 @@ public class ShareRepositoryEbean implements ShareRepository {
         return Optional.empty();
       }
     } else {
-      final Share share = new Share(
-        nodeId,
-        targetUserId,
-        permissions,
-        System.currentTimeMillis(),
-        direct,
-        createdViaCollaborationLink
-      );
+      final Share share =
+          new Share(
+              nodeId,
+              targetUserId,
+              permissions,
+              System.currentTimeMillis(),
+              direct,
+              createdViaCollaborationLink,
+              null);
       expireTimestamp.ifPresent(share::setExpiredAt);
-      mDB.getEbeanDatabase().save(share);
+      ebeanDatabaseManager.getEbeanDatabase().save(share);
       return Optional.of(share);
     }
   }
 
   public void upsertShareBulk(
-    List<String> nodeIds,
-    String targetUserId,
-    ACL permissions,
-    Boolean direct,
-    Boolean createdViaCollaborationLink,
-    Optional<Long> expireTimestamp
-  ) {
-    try (Transaction transaction = mDB.getEbeanDatabase().beginTransaction()) {
+      List<String> nodeIds,
+      String targetUserId,
+      ACL permissions,
+      Boolean direct,
+      Boolean createdViaCollaborationLink,
+      Optional<Long> expireTimestamp) {
+    try (Transaction transaction = ebeanDatabaseManager.getEbeanDatabase().beginTransaction()) {
 
       // use JDBC batch
       transaction.setBatchMode(true);
       transaction.setBatchSize(50);
 
       // these go to batch buffer
-      nodeIds.forEach(nodeId ->
-        upsertShare(
-          nodeId,
-          targetUserId,
-          permissions,
-          direct,
-          createdViaCollaborationLink,
-          expireTimestamp
-        )
-      );
+      nodeIds.forEach(
+          nodeId ->
+              upsertShare(
+                  nodeId,
+                  targetUserId,
+                  permissions,
+                  direct,
+                  createdViaCollaborationLink,
+                  expireTimestamp));
       // flush batch and commit
       transaction.commit();
     }
   }
 
   public Share updateShare(Share share) {
-    mDB.getEbeanDatabase().update(share);
+    ebeanDatabaseManager.getEbeanDatabase().update(share);
     return share;
   }
 
-  public boolean deleteShare(
-    String nodeId,
-    String targetUserId
-  ) {
+  public boolean deleteShare(String nodeId, String targetUserId) {
     return getShare(nodeId, targetUserId)
-      .map(share -> mDB.getEbeanDatabase().delete(share))
-      .orElse(false);
+        .map(share -> ebeanDatabaseManager.getEbeanDatabase().delete(share))
+        .orElse(false);
   }
 
-  public void deleteSharesBulk(
-    List<String> nodeIds,
-    String targetUserId
-  ) {
-    try (Transaction transaction = mDB.getEbeanDatabase().beginTransaction()) {
+  public void deleteSharesBulk(List<String> nodeIds, String targetUserId) {
+    try (Transaction transaction = ebeanDatabaseManager.getEbeanDatabase().beginTransaction()) {
 
       // use JDBC batch
       transaction.setBatchMode(true);
@@ -155,69 +142,61 @@ public class ShareRepositoryEbean implements ShareRepository {
     }
   }
 
-  public void deleteSharesBulk(
-    List<String> nodeIds
-  ) {
-    mDB.getEbeanDatabase()
-      .find(Share.class)
-      .where()
-      .in(Files.Db.Share.NODE_ID, nodeIds)
-      .delete();
+  public void deleteSharesBulk(List<String> nodeIds) {
+    ebeanDatabaseManager
+        .getEbeanDatabase()
+        .find(Share.class)
+        .where()
+        .in(Files.Db.Share.NODE_ID, nodeIds)
+        .delete();
 
     // TODO Uniform the delete behaviour with other delete method when we implement unique shareId
   }
 
-  public List<Share> getShares(
-    List<String> nodeIds,
-    String targetUserId
-  ) {
-    return mDB.getEbeanDatabase()
-      .find(Share.class)
-      .where()
-      .in(Files.Db.Share.NODE_ID, nodeIds)
-      .eq(Files.Db.Share.SHARE_TARGET_UUID, targetUserId)
-      .findList();
+  public List<Share> getShares(List<String> nodeIds, String targetUserId) {
+    return ebeanDatabaseManager
+        .getEbeanDatabase()
+        .find(Share.class)
+        .where()
+        .in(Files.Db.Share.NODE_ID, nodeIds)
+        .eq(Files.Db.Share.SHARE_TARGET_UUID, targetUserId)
+        .findList();
   }
 
-  public List<Share> getShares(
-    String nodeId,
-    List<String> targetUserIds
-  ) {
-    Query<Share> query = mDB.getEbeanDatabase()
-      .find(Share.class)
-      .where()
-      .eq(Files.Db.Share.NODE_ID, nodeId)
-      .query();
+  public List<Share> getShares(String nodeId, List<String> targetUserIds) {
+    ExpressionList<Share> query =
+        ebeanDatabaseManager
+            .getEbeanDatabase()
+            .find(Share.class)
+            .where()
+            .eq(Files.Db.Share.NODE_ID, nodeId);
 
     if (!targetUserIds.isEmpty()) {
-      query.where().in(Files.Db.Share.SHARE_TARGET_UUID, targetUserIds);
+      query.in(Files.Db.Share.SHARE_TARGET_UUID, targetUserIds);
     }
 
     return query.findList();
   }
 
   public List<Share> getShares(List<String> nodeIds) {
-    return mDB.getEbeanDatabase()
-      .find(Share.class)
-      .where()
-      .in(Db.Share.NODE_ID, nodeIds)
-      .findList();
+    return ebeanDatabaseManager
+        .getEbeanDatabase()
+        .find(Share.class)
+        .where()
+        .in(Db.Share.NODE_ID, nodeIds)
+        .findList();
   }
 
-  public List<String> getSharesUsersIds(
-    String nodeId,
-    List<ShareSort> sorts
-  ) {
-    Query<Share> query = mDB.getEbeanDatabase()
-      .createQuery(Share.class)
-      .where()
-      .eq(Files.Db.Share.NODE_ID, nodeId)
-      .query();
+  public List<String> getSharesUsersIds(String nodeId, List<ShareSort> sorts) {
+    Query<Share> query =
+        ebeanDatabaseManager
+            .getEbeanDatabase()
+            .createQuery(Share.class)
+            .where()
+            .eq(Files.Db.Share.NODE_ID, nodeId)
+            .query();
 
     sorts.forEach(sort -> sort.getOrderEbeanQuery(query));
-    return query.findList()
-      .stream()
-      .map(Share::getTargetUserId)
-      .collect(Collectors.toList());
+    return query.findList().stream().map(Share::getTargetUserId).toList();
   }
 }
